<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Administrative Details -->
    <string name="app_name">Titanic Tic Tac Toe</string>
    <string name="app_id">15248927065</string>
    <string name="facebook_app_id">267430880368292</string>
    <string name="fb_login_protocol_scheme">fb267430880368292</string>
    <!-- Launch Screen -->
    <string name="tic">Tic</string>
    <string name="tac">Tac</string>
    <string name="toe">Toe</string>
    <string name="guide">Tic-Tac-Toe to the next level. Enjoy!</string>
    <string name="playButtonText">Play</string>
    <!-- Instructions -->
    <string name="instructionsPrompt">Do you already know how Tic Tac Toe works?</string>
    <string name="level1Instructions1">No worries! Since you don\'t know how Tic Tac Toe works, let\'s give you a quick intro. Start by tapping on any one of the available squares</string>
    <string name="level1Instructions2">Since you started off the game, you are X this time around. Your opponent can now make a move in any one of the remaining squares and they are O</string>
    <string name="level1Instructions3">Now, before we continue, let\'s clarify what your goal is</string>
    <string name="level1Instructions4">You are trying to get your symbol, X in this case, to be either 3 in a row</string>
    <string name="level1Instructions5">You are trying to get your symbol, X in this case, to be either 3 in a row, 3 in a column</string>
    <string name="level1Instructions6">You are trying to get your symbol, X in this case, to be either 3 in a row, 3 in a column, or 3 in a diagonal</string>
    <string name="level1Instructions7">Now let\'s play a bit</string>
    <string name="level1Instructions8">Well done! Remember to make sure your opponent doesn\'t get 3 in a row and they will be doing the same</string>
    <string name="level1Instructions9">Hope you enjoyed! If you\'d like to try to learn how we make Tic Tac Toe a little more complicated, please click Next. If you\'d like to continue practicing for now and perhaps try later, feel free to look at the instructions again (just click Yes when asking whether you know Tic Tac Toe already since now you do!)</string>
    <string name="level2Instructions1">Great! Let\'s show you the next level of Tic Tac Toe. Start by tapping on any one of the available squares</string>
    <string name="level2Instructions2">Oh, look at that! Since you picked the %s square, your opponent is only allowed to play in the %s section of the board (everything that is red cannot be clicked on). Let\'s let them make a move</string>
    <string name="level2Instructions3">As you can see, this is more complicated since we are moving around the entire board. But the goal is the same as regular tic tac toe. You keep moving around and try to win the different sections by getting 3 in a row, column or diagonal</string>
    <string name="level2Instructions4You">Awesome! It looks like you can win this section of the board</string>
    <string name="level2Instructions4Opponent">It looks like your opponent will win this section of the board</string>
    <string name="level2Instructions5You">Now you\'ll want to click here</string>
    <string name="level2Instructions5Opponent">They\'ll want to click here</string>
    <string name="level2Instructions6You">Awesome! You just won the %s section!</string>
    <string name="level2Instructions6Opponent">Oh no! Your opponent just won the %s section!</string>
    <string name="level2Instructions6">As you can see, it became a giant %s! To win the game, you have to continue playing and try to win 3 sections in a row, column or diagonal. So you can think of this as Tic Tac Toe in Tic Tac Toe :)</string>
    <string name="level2Instructions7Part1">Oh, and one more thing you should be aware of.</string>
    <string name="level2Instructions7Part2">Oh, and one more thing you should be aware of. If you or your opponent click in any of the highlighted areas at any point, since that particular section is not available, the entire game board would become available.</string>
    <string name="level2Instructions7Part3You">Please click here to see what that will look like.</string>
    <string name="level2Instructions7Part3Opponent">So it would look like this.</string>
    <string name="level2Instructions8">Now let\'s play!</string>
    <string name="level2Instructions9">Hope you enjoyed the game and keep practicing, perhaps try playing with a friend!</string>
    <string name="instructionsYouWon">Congrats! You won! </string>
    <string name="instructionsOpponentWon">Sorry! Your opponent won. </string>
    <string name="level1Title">Level 1 - Normal Tic Tac Toe</string>
    <string name="level1Explanation">This is basically like normal Tic Tac Toe, a simple 3x3 grid in which you alternatively play X or O until one of the players gets 3 of their symbol in a row, column, or diagonal, leading to victory for that player. The opponent will logically try to block the player from attaining this goal while trying to attain it themselves.</string>
    <string name="level1TrialPrompt">Try it!</string>
    <string name="level1TrialButton">Level 1 - Trial</string>
    <string name="level2Title">Level 2 - Next Level Tic Tac Toe</string>
    <string name="level2Explanation1">Now it is time for Tic Tac Toe to the next level. In this level, the board is laid out like a giant Tic Tac Toe board, called a metaboard, with smaller Tic Tac Toe boards, called miniboards, in each section of the metaboard. Your purpose in this game is to win 3 of the sections of the metaboard in a row, column or diagonal. Hence, it is like Tic Tac Toe, but with a bit more depth in winning the whole game. Now, unlike normal Tic Tac Toe, the entire metaboard does not remain active throughout the game. Instead, each move one makes decides in which section of the metaboard the opponent will play.</string>
    <string name="level2Explanation2">As you can see above, the player selected the center square in one of the miniboards. This results in the opponent playing in miniboard occupying the center section of the metaboard. This pattern is followed throughout the game with the various opponents deciding where in the board their opponents may play. Now, as the purpose is to win the individual miniboards to eventually win the metaboard you may like to see how this is done. The miniboards are won the same way as they are in regular Tic Tac Toe, via 3 in a row, column, or diagonal. To mark the victory, the miniboard is replaced with a giant representative of your symbol in the game, as can be seen below.</string>
    <string name="level2Explanation3">As you can see above, the player could win the center board if he/she is X. As they are, let\'s see what happens.</string>
    <string name="level2Explanation4">Voila! The won board is replaced with a giant of the symbol, which in this case was X. However, the above picture also represents another important aspect of the game. As we could see, the winning play was to playin the center square. However, that would lead to the opponent playing in the center section of the metaboard, which we just won. Basically, when a player selects his/her opponent to play in a section of the metaboard that is already won, as the opponent cannot play there, the entire metaboard is made available to the opponent. He/she can play anywhere on the metaboard. Hence, when that is the only decision left to you, one must carefully consider as to whether they wish to allow the opponent such power. This is also the pattern that will follow when one chooses a section of the metaboard that is completely full and ended up being a mini-tie.</string>
    <string name="level2TrialPrompt">Below is the option to give level 2 a trial to better see how it works. Enjoy!</string>
    <string name="level2TrialButton">Level 2 - Trial</string>
    <string name="level3Title">Level 3 - Not Available Yet</string>
    <string name="level4Title">Level 4 - Not Available Yet</string>
    <!-- Main Menu -->
    <string name="welcome">Welcome!</string>
    <string name="mainMenuTitle">Main Menu</string>
    <string name="instructionsButtonText">Instructions</string>
    <string name="level1ButtonText">n = 1</string>
    <string name="level2ButtonText">n = 2</string>
    <string name="level3ButtonText">n = 3</string>
    <string name="level4ButtonText">n = 4</string>
    <string name="savedGamesButtonText">Games Being Played</string>
    <string name="unavailableLevel">Level %d is not available yet, sorry</string>
    <!-- Player Selector View -->
    <string name="playerSelectorTitle">Players</string>
    <string name="playerSelectorInstructions">Please enter the player names below:</string>
    <string name="player1Prompt">Player 1</string>
    <string name="player2Prompt">Player 2</string>
    <string name="playerNameRequired">Please fill in both player names to continue</string>
    <!-- Active Game View -->
    <string name="playersTurn">%s\'s Turn</string>
    <string name="level1TitleGame">Tic</string>
    <string name="level2TitleGame">Tic Tac</string>
    <string name="level3TitleGame">Tic Tac Toe</string>
    <string name="level4TitleGame">T4</string>
    <!-- Winner View -->
    <string name="rematchButton">Rematch?</string>
    <string name="mainMenuButton">Main Menu</string>
    <string name="viewGameButton">View Game</string>
    <string name="tieGame">It\'s a Tie</string>
    <string name="wonGame">%s WINS!!!\nCongrats!</string>
    <!-- Current Games View -->
    <string name="currentGamesTitle">Active Games</string>
    <string name="savedGamesButton">View Locally Saved Games</string>
    <string name="facebookHeader">On Facebook:</string>
    <string name="localHeader">Local:</string>
</resources>
