<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructionsLayout"
        android:orientation="vertical"
        android:background="@color/colorGreen"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1Title"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/level1UnfilledImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:src="@drawable/level1unfilled" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1Explanation"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/level1FilledImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/level1filled" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level1TrialPrompt"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/level1TrialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/level1TrialButton"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2Title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/level2UnfilledImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/level2unfilled" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2Explanation1"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/level2MakingAMoveImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/level2makingamove" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2Explanation2"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/level2PreMetaWinImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/level2premetawin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2Explanation3"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/level2PostMetaWinImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/level2postmetawin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2Explanation4"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level2TrialPrompt"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/level2TrialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/level2TrialButton"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level3Title"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level4Title"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp" />

    </LinearLayout>

</ScrollView>