<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/playerSelectorTitle"
        android:textColor="@color/colorBlack"
        android:textSize="32sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/playerSelectorInstructions"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/player1Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/player1Prompt"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/player2Prompt"
        android:textColorHint="@color/colorBlack"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/playButtonText"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue" />

</LinearLayout>
