<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@color/colorGreen">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/currentGamesTitle"
		android:textColor="@color/colorBlack"
		android:textSize="30sp"/>

	<ScrollView
		android:id="@+id/currentGamesScrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/currentGamesLayout"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/facebookHeader"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/localHeader"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <Button
                android:id="@+id/savedGamesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/savedGamesButton"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:background="@color/colorBlack" />

			<FrameLayout
				android:id="@+id/currentGamesProgressBarHolder"
				android:animateLayoutChanges="true"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ProgressBar
					style="?android:attr/progressBarStyleLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:indeterminate="true"
					android:layout_gravity="center" />

			</FrameLayout>

		</LinearLayout>

	</ScrollView>
	
</LinearLayout>